--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@ body {
   font-family: var(--sans-serif);
   font-variation-settings: var(--font-vars-default);
   font-size: var(--size-body);
+  overflow-x: hidden;
 }
 
 a {
